flex wrapped contact links and fixed contact links shifting when in desktop

--- a/Portfolio.css
+++ b/Portfolio.css
@@ -264,6 +264,7 @@ section{
     .icons2 {
         flex-direction: row;
         gap: 1.5rem;
+        flex-wrap: wrap;
 
     }
 
@@ -290,7 +291,14 @@ section{
     .skillslist{
         gap: 15rem;
     }
+
+    .leftRight{
+        overflow: hidden;
+        white-space: nowrap;
+    }
 }
+
+
 
 /*<div>
 <form class="submissionform">
